# SmartHome

api/: auth_api.yaml  smarthome_rest_api.yaml
ios/SmartHome/SmartHome/: ContentView.swift  SmartHomeApp.swift
ios/SmartHome/SmartHome.xcodeproj/: project.pbxproj
iosApp/AuthModule/: Package.swift
iosApp/AuthModule/Sources/AuthModule/: AuthEnvironment.swift
iosApp/AuthModule/Sources/AuthModule/Composition/: AuthModuleAssembly.swift
iosApp/AuthModule/Sources/AuthModule/Presentation/: AuthRootView.swift  AuthViewModel.swift
iosApp/AuthModule/Tests/AuthModuleTests/: AuthViewModelTests.swift
iosApp/HomeModule/: Package.swift
iosApp/HomeModule/Sources/HomeModule/: HomeRootView.swift
iosApp/HomeModule/Sources/HomeModule/Composition/: HomeModuleAssembly.swift
iosApp/HomeModule/Tests/HomeModuleTests/: HomeViewModelTests.swift
iosApp/Network/: Package.swift
iosApp/Network/Sources/Network/: AnyEncodable.swift  AuthenticatedNetworkProvider.swift  NetworkError.swift  NetworkProvider.swift  NetworkResponse.swift  RequestTask.swift  TargetType.swift
iosApp/Network/Tests/NetworkTests/: NetworkProviderTests.swift
middleware/auth_service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
middleware/auth_service/alembic/: env.py
middleware/auth_service/alembic/versions/: 20260323_0001_create_auth_tables.py
middleware/auth_service/app/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  observability.py  rate_limit.py  routes.py  schemas.py  security.py  service.py
(+22 files in other folders)
